add: documentation & gifs

--- a/templates/documentation.html
+++ b/templates/documentation.html
@@ -113,14 +113,14 @@ pip <span class="hljs-keyword">install </span>Flask==<span class="hljs-number">1
 
 <p><strong>Step 4:  Downloading Model &amp; API Files</strong></p>
 <ul>
-<li>Once the model has been returned you can now proceed to download <code>model.py</code> and <code>api.py</code>. <blockquote>
-<p>⚠️Make sure to keep <code>model.py</code> and <code>api.py</code> in the same folder.</p>
+<li>Once the model has been returned you can now proceed to download <code>output.py</code> and <code>api.py</code>. <blockquote>
+<p>⚠️Make sure to keep <code>output.py</code> and <code>api.py</code> in the same folder.</p>
 </blockquote>
 </li>
 </ul>
 
 <ul>
-<li><p>Run <code>model.py</code> Certain files will be downloaded in the same folder as follows:</p>
+<li><p>Run <code>output.py</code> Certain files will be downloaded in the same folder as follows:</p>
 </li>
 <li><p><code>model.pkl</code></p>
 </li>
@@ -137,7 +137,7 @@ pip <span class="hljs-keyword">install </span>Flask==<span class="hljs-number">1
 </blockquote>
 <p>  <strong>Step 5:  Run Flask server &amp; API</strong></p>
 <ul>
-<li>Run <code>model.py</code> to install requirements and train the model on your machine by entering the following command in your terminal</li>
+<li>Run <code>output.py</code> to install requirements and train the model on your machine by entering the following command in your terminal</li>
 </ul>
 <pre><code class="lang-bash"><span class="hljs-keyword">python</span> model.<span class="hljs-keyword">py</span>
 </code></pre>
