--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 <body>
     <br>
     <div class="header">
-    <a href="https://ml-assistant.herokuapp.com/"><img src="..\static\icon.png"  class='icon'></a>
+    <img src="..\static\icon.png"  class='icon'>
     <h1 class='heading'>Assistant</h1>
     <br>
     </div>
