--- a/templates/documentation.html
+++ b/templates/documentation.html
@@ -201,7 +201,7 @@ pip <span class="hljs-keyword">install </span>Flask==<span class="hljs-number">1
         <ul>
             <li>
                 Run <code>api.py</code> to start a flask server on your machine by entering the following
-                command in your terminal. A sample JSON <code>data.json</code> will also be created.
+                command in your terminal. A sample JSON file <code>data.json</code> will also be created which will represent the body of the JSON file to be sent.
             </li>
         </ul>
         <pre><code class="lang-bash"><span class="hljs-keyword">python</span> api.<span class="hljs-keyword">py</span>
